--- a/TaskDesk_version2/App.axaml
+++ b/TaskDesk_version2/App.axaml
@@ -10,7 +10,8 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <sty:FluentAvaloniaTheme />
+        <sty:FluentAvaloniaTheme PreferSystemTheme="False"/>
+        <StyleInclude Source="Design/Design.axaml"></StyleInclude>
     </Application.Styles>
     
     <Application.Resources>
