--- a/TaskDesk_version2/Views/OpenTaskWindow.axaml
+++ b/TaskDesk_version2/Views/OpenTaskWindow.axaml
@@ -74,8 +74,8 @@
                 </StackPanel>
                 
                 <StackPanel Grid.Row="2" Grid.Column="2" Orientation="Horizontal">
-                        <Button Name="SaveButton" Content="Save" Width="80" HorizontalAlignment="Right" Margin="5" IsDefault="True"  Command="{Binding SaveTaskCommand}"/>
-                        <Button Name="CloseButton" Content="Close" Width="80" HorizontalAlignment="Right" Margin="5" Command="{Binding CloseCommand}"/>
+                        <Button Name="SaveButton" Content="Save" Width="80" HorizontalAlignment="Right" IsDefault="True"  Command="{Binding SaveTaskCommand}"/>
+                        <Button Name="CloseButton" Content="Close" Width="80" HorizontalAlignment="Right" Command="{Binding CloseCommand}"/>
                 </StackPanel>
                 
         </Grid>
