--- a/TaskDesk_version2/Design/Design.axaml
+++ b/TaskDesk_version2/Design/Design.axaml
@@ -5,15 +5,49 @@
                 <Setter Property="CornerRadius" Value="8"/>
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="Padding" Value="8,4"/>
+                <Setter Property="MinWidth" Value="25"/>
+                <Setter Property="MinHeight" Value="25"/>
         </Style>
         
         <Style Selector="TextBox">
                 <Setter Property="CornerRadius" Value="4"/>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Height" Value="28"/>
+        </Style>
+        
+        <Style Selector="TextBox.TaskDescriptionBox">
+                <Setter Property="TextWrapping" Value="Wrap"/>
+                <Setter Property="AcceptsReturn" Value="True"/>
+                <Setter Property="Height" Value="375"/>
+        </Style>
+        
+        <Style Selector="Image.PasswordVisibilityToggleImage">
+                <Setter Property="Width" Value="30"/>
+                <Setter Property="Height" Value="30"/>
+        </Style>
+        
+        <Style Selector="TextBlock.primary">
                 <Setter Property="Margin" Value="5"/>
         </Style>
         
-        <Style Selector="TextBlock">
-                <Setter Property="Margin" Value="5"/>
+        <Style Selector="StackPanel.Row">
+                <Setter Property="Orientation" Value="Horizontal"/>
+                <Setter Property="Spacing" Value="10"/>
         </Style>
         
+        <Style Selector="StackPanel.Task">
+                <Setter Property="Margin" Value="10,0,10,10"/>
+        </Style>
+        
+        <Style Selector="TextBlock.TaskProperty">
+                <Setter Property="Width" Value="200"/>
+                <Setter Property="FontSize" Value="18"/>
+        </Style>
+        
+        <Style Selector="Border.TaskRowBorder">
+                <Setter Property="CornerRadius" Value="8"/>
+                <Setter Property="Padding" Value="8"/>
+                <Setter Property="Margin" Value="4"/>
+                <Setter Property="Background" Value="Gray"/>
+        </Style>
 </Styles>
