--- a/TaskDesk_version2/Views/MainWindow.axaml
+++ b/TaskDesk_version2/Views/MainWindow.axaml
@@ -60,8 +60,8 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             
-            <Border Grid.Row="0" Padding="8" Margin="4" Background="Gray" CornerRadius="8">
-            <StackPanel Name="Header" Orientation="Horizontal" Spacing="10">
+            <Border Classes="TaskRowBorder" Grid.Row="0">
+            <StackPanel Name="Header" Classes="Row">
                 <TextBlock Text="Title" FontWeight="Bold" Width="200" FontSize="22"/>
                 <TextBlock Text="Description" FontWeight="Bold" Width="200" FontSize="22"/>
                 <TextBlock Text="Due Date" FontWeight="Bold" Width="200" FontSize="22"/>
@@ -76,7 +76,7 @@
                 
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border CornerRadius="8" Padding="8" Margin="4" Background="Gray" DoubleTapped="TaskDoubleClick" PointerEntered="PointerEntered" PointerExited="PointerExited">
+                        <Border Classes="TaskRowBorder" DoubleTapped="TaskDoubleClick" PointerEntered="PointerEntered" PointerExited="PointerExited">
                             <ToolTip.Tip>
                                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                                     <TextBlock Text="{Binding Description}" TextWrapping="Wrap" MaxWidth="300" MaxHeight="300"/>
@@ -90,13 +90,13 @@
                                 </MenuFlyout>
                             </Border.ContextFlyout>
                             
-                            <StackPanel Orientation="Horizontal" Spacing="10" Margin="10,0,10,10">
-                                <TextBlock Text="{Binding Title}" Width="200" FontSize="18"/>
-                                <TextBlock Text="{Binding Description}" Width="200" FontSize="18"/>
-                                <TextBlock Text="{Binding DateAsString}" Width="200" FontSize="18"/>
-                                <TextBlock Text="{Binding UsersAsString}" Width="200" FontSize="18"/>
-                                <TextBlock Text="{Binding GroupsAsString}" Width="200" FontSize="18"/>
-                                <TextBlock Text="{Binding StateAsString}" Width="200" FontSize="18"/>
+                            <StackPanel Classes="Task Row">
+                                <TextBlock Classes="TaskProperty primary" Text="{Binding Title}"/>
+                                <TextBlock Classes="TaskProperty primary" Text="{Binding Description}"/>
+                                <TextBlock Classes="TaskProperty primary" Text="{Binding DateAsString}"/>
+                                <TextBlock Classes="TaskProperty primary" Text="{Binding UsersAsString}"/>
+                                <TextBlock Classes="TaskProperty primary" Text="{Binding GroupsAsString}"/>
+                                <TextBlock Classes="TaskProperty primary" Text="{Binding StateAsString}"/>
                             </StackPanel>
                         </Border>
                     </DataTemplate>
