--- a/TaskDesk_version2/Views/InfoWindow.axaml
+++ b/TaskDesk_version2/Views/InfoWindow.axaml
@@ -5,7 +5,7 @@
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner">
         
-        <Grid Name="Root" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
                 
                 <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
