--- a/TaskDesk_version2/Views/AddTaskWindow.axaml
+++ b/TaskDesk_version2/Views/AddTaskWindow.axaml
@@ -7,7 +7,7 @@
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner">
 
-    <Grid Name="Root" Margin="10">
+    <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -18,62 +18,62 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         
-        <StackPanel Name="TitleCell" Grid.Row="0" Orientation="Horizontal" Spacing="8" Margin="0,0,0,8">
+        <StackPanel Classes="CellInAddWindows" Grid.Row="0">
             
-            <TextBlock Text="Title:" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Classes="primary" Text="Title:" VerticalAlignment="Center"/>
             
-            <TextBox Name="TitleTextBox" Width="200" Watermark="Enter a title for the task" Margin="5" Text="{Binding TaskTitle, Mode=TwoWay}"/>
+            <TextBox Width="200" Watermark="Enter a title for the task" Text="{Binding TaskTitle, Mode=TwoWay}"/>
             
         </StackPanel>
         
-        <StackPanel Name="DescriptionCell" Grid.Row="1" Orientation="Horizontal" Spacing="8" Margin="0,0,0,8">
+        <StackPanel Classes="CellInAddWindows" Grid.Row="1">
             
-            <TextBlock Text="Description:" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Classes="primary" Text="Description:" VerticalAlignment="Center"/>
             
             <ScrollViewer Height="100" VerticalScrollBarVisibility="Auto">
-                <TextBox Name="DescriptionTextBox" MaxHeight="100" Width="200" TextWrapping="Wrap" Watermark="Enter a description for the task" Margin="5" Text="{Binding TaskDescription, Mode=TwoWay}"/>
+                <TextBox Classes="DescriptionTextBoxInAddWindows" Watermark="Enter a description for the task" Text="{Binding TaskDescription, Mode=TwoWay}"/>
             </ScrollViewer>
         </StackPanel>
         
-        <StackPanel Name="DueDateCell" Grid.Row="2" Orientation="Horizontal" Spacing="8" Margin="0,0,0,8">
+        <StackPanel Classes="CellInAddWindows" Grid.Row="2">
             
-            <TextBlock Text="Target Date:" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Classes="primary" Text="Target Date:" VerticalAlignment="Center"/>
             
-            <DatePicker Name="DueDatePicker" Margin="5" SelectedDate="{Binding DateOn, Mode=TwoWay}"/>
+            <DatePicker Margin="5" SelectedDate="{Binding DateOn, Mode=TwoWay}"/>
             
         </StackPanel>
         
-        <StackPanel Name="StateCell" Grid.Row="3" Orientation="Horizontal" Spacing="8" Margin="0,0,0,8">
+        <StackPanel Classes="CellInAddWindows" Grid.Row="3">
             
-            <TextBlock Text="State:" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Classes="primary" Text="State:" VerticalAlignment="Center"/>
             
             <ComboBox Name="StateCombo" PlaceholderText="Select a state" SelectedItem="{Binding TaskStateString}"/>
             
         </StackPanel>
         
-        <StackPanel Name="GroupCell" Grid.Row="4" Orientation="Horizontal" Spacing="8" Margin="0,0,0,8">
+        <StackPanel Classes="CellInAddWindows" Grid.Row="4">
             
-            <TextBlock Text="Groups:" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Classes="primary" Text="Groups:" VerticalAlignment="Center"/>
             
             <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                <ListBox Name="GroupList" Width="200" Height="100" SelectionMode="Multiple, Toggle" Margin="5" SelectedItems="{Binding GroupNames}"/>
+                <ListBox Classes="UsersOrGroupsList" Name="GroupList" SelectedItems="{Binding GroupNames}"/>
             </ScrollViewer>
             
         </StackPanel>
         
-        <StackPanel Name="UserCell" Grid.Row="5" Orientation="Horizontal" Spacing="8" Margin="0,0,0,8">
+        <StackPanel Classes="CellInAddWindows" Grid.Row="5">
             
-            <TextBlock Text="Users:" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Classes="primary" Text="Users:" VerticalAlignment="Center"/>
             
             <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                <ListBox Name="UserList" Width="200" Height="100" SelectionMode="Multiple, Toggle" Margin="5" SelectedItems="{Binding UserNames}"/>
+                <ListBox Classes="UsersOrGroupsList" Name="UserList" SelectedItems="{Binding UserNames}"/>
             </ScrollViewer>
             
         </StackPanel>
         
-        <StackPanel Name="ButtonCell" Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right" Spacing="8">
-            <Button Name="CancelButton" Content="Cancel" Command="{Binding CancelCommand}"/>
-            <Button Name="OkButton" Content="OK" Command="{Binding SaveCommand}" IsDefault="True"/>
+        <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right" Spacing="8">
+            <Button Content="Cancel" Command="{Binding CancelCommand}"/>
+            <Button Content="OK" Command="{Binding SaveCommand}" IsDefault="True"/>
         </StackPanel>
     </Grid>
 
