--- a/TaskDesk_version2/Views/LoginWindow.axaml
+++ b/TaskDesk_version2/Views/LoginWindow.axaml
@@ -9,7 +9,7 @@
         Title="Login"
         WindowState="Maximized">
         
-        <Grid Name="Root" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                  
                 <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -17,25 +17,25 @@
                         <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
         
-                <StackPanel Grid.Row="0" Name="LoginPanel" Width="300" Height="200" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <StackPanel Grid.Row="0" Width="300" Height="200" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Center">
                          
-                        <TextBlock Name="LoginLabel" Classes="primary" Text="E-Mail:" FontSize="16"/>
+                        <TextBlock Classes="primary" Text="E-Mail:" FontSize="16"/>
                         <TextBox Name="LoginTextBox" Text="{Binding Email}" TextChanged="LoginTextBox_TextChanged"/>
                          
-                        <TextBlock Name="PasswordLabel" Classes="primary" Text="Password:" FontSize="16"/>
+                        <TextBlock Classes="primary" Text="Password:" FontSize="16"/>
                          
-                        <StackPanel Name="PasswordCell" Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal">
                              
                                 <TextBox Name="PasswordBox" LostFocus="PasswordBox_LostFocus" GotFocus="PasswordBox_GotFocus" Text="{Binding Password}" PasswordChar="*" Width="235"/>
                              
-                                <Button Name="PasswordVisibilityToggle" Command="{Binding PasswordVisibleCommand}">
+                                <Button Command="{Binding PasswordVisibleCommand}">
                                         <Image x:Name="PasswordVisibilityToggleImage" Source="../Assets/NotVisible.png" Classes="PasswordVisibilityToggleImage"/>
                                 </Button>
                         </StackPanel>
                          
                         <StackPanel Orientation="Horizontal">
-                                <Button Name="LoginButton" Content="Login" Margin="10" IsDefault="True" Command="{Binding LoginCommand}"/>
-                                <Button Name="CloseButton" Content="Close" Margin="10" IsCancel="True" Command="{Binding CloseCommand}"/>
+                                <Button Content="Login" Margin="10" IsDefault="True" Command="{Binding LoginCommand}"/>
+                                <Button Content="Close" Margin="10" IsCancel="True" Command="{Binding CloseCommand}"/>
                         </StackPanel>
                 </StackPanel>
                 
