--- a/TaskDesk_version2/Views/ManageUsersWindow.axaml
+++ b/TaskDesk_version2/Views/ManageUsersWindow.axaml
@@ -7,7 +7,7 @@
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner">
         
-        <Grid Name="Root">
+        <Grid>
                 
                 <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -26,18 +26,18 @@
                         <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 
-                <TextBox Name="IdBox" Height="20" Grid.Row="0" Grid.Column="0" FontSize="14" Background="#1E1E1E" Margin="5" IsReadOnly="True" IsEnabled="False" Foreground="White"/>
+                <TextBox Name="IdBox" Height="20" Grid.Row="0" Grid.Column="0" FontSize="14" Margin="5" IsReadOnly="True" IsEnabled="False" Foreground="White"/>
                 
-                <StackPanel Grid.Row="0" Grid.Column="1" Background="#1E1E1E" Orientation="Horizontal">
-                        <TextBlock Text="Full Name:" FontSize="16" Background="#1E1E1E" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                        <TextBox FontSize="14" Height="20" TextAlignment="Center" Background="#1E1E1E" Margin="5" Text="{Binding Fullname}" HorizontalAlignment="Right" Width="100"/>
+                <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                        <TextBlock Text="Full Name:" FontSize="16" Classes="primary" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBox FontSize="14" Height="20" TextAlignment="Center" Margin="5" Text="{Binding Fullname}" HorizontalAlignment="Right" Width="100"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" Width="200" Margin="5">
-                        <TextBlock Background="#1E1E1E" Text="Assigned Tasks:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
+                        <TextBlock Text="Assigned Tasks:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
-                                <ListBox Name="TasksList" SelectionMode="Multiple, Toggle" SelectedItems="{Binding AssignedTasks}" ItemsSource="{Binding AllTasks}" Background="#1E1E1E">
+                                <ListBox SelectionMode="Multiple, Toggle" SelectedItems="{Binding AssignedTasks}" ItemsSource="{Binding AllTasks}" Background="#1E1E1E">
                                         <ListBox.ItemTemplate>
                                                 <DataTemplate>
                                                         <TextBlock Text="{Binding Title}"/>
@@ -48,10 +48,10 @@
                 </StackPanel>
                 
                 <StackPanel Grid.Row="3" Grid.Column="2" Width="200" Grid.RowSpan="2" Margin="5">
-                        <TextBlock Background="#1E1E1E" Text="Assigned Groups:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
+                        <TextBlock Text="Assigned Groups:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
-                                <ListBox Name="GroupsList" SelectionMode="Multiple, Toggle" SelectedItems="{Binding AssignedGroups}" ItemsSource="{Binding AllGroups}" Background="#1E1E1E">
+                                <ListBox SelectionMode="Multiple, Toggle" SelectedItems="{Binding AssignedGroups}" ItemsSource="{Binding AllGroups}" Background="#1E1E1E">
                                         <ListBox.ItemTemplate>
                                                 <DataTemplate>
                                                         <TextBlock Text="{Binding Name}"/>
@@ -62,7 +62,7 @@
                 </StackPanel>
                 
                 <StackPanel Grid.Row="0" Grid.Column="4" Grid.RowSpan="5" Margin="5">
-                        <TextBox Name="SearchBar" Height="20" FontSize="14" Background="#1E1E1E" Margin="5" Text="{Binding SearchInput}" Watermark="Search User..."/>
+                        <TextBox Name="SearchBar" Height="20" FontSize="14" Margin="5" Text="{Binding SearchInput}" Watermark="Search User..."/>
                         
                         <ScrollViewer VerticalScrollBarVisibility="Auto" Width="200">
                                 <ListBox Name="UserList" SelectionMode="Single" SelectedItem="{Binding SelectedUser}" ItemsSource="{Binding AllUsers}" Background="#1E1E1E">
@@ -78,26 +78,26 @@
                 <Border Grid.Row="0" Grid.Column="3" Grid.RowSpan="6" BorderThickness="1" BorderBrush="Gray" Margin="5"/>
                 
                 <StackPanel Grid.Row="1" Grid.Column="0" MaxWidth="200" Grid.ColumnSpan="2" Margin="5">
-                        <TextBlock FontSize="16" Background="#1E1E1E" Margin="5" VerticalAlignment="Center" Text="Email:"/>
-                        <TextBox FontSize="14" Height="20" Background="#1E1E1E" Margin="5" Text="{Binding Email}"/>
+                        <TextBlock FontSize="16" Classes="primary" VerticalAlignment="Center" Text="Email:"/>
+                        <TextBox FontSize="14" Height="20" Margin="5" Text="{Binding Email}"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" MaxWidth="200" Margin="5">
-                        <TextBlock FontSize="16" Background="#1E1E1E" Margin="5" VerticalAlignment="Center" Text="Password:"/>
-                        <TextBox FontSize="14" Height="20" Background="#1E1E1E" Margin="5" Text="{Binding Password}"/>
+                        <TextBlock FontSize="16" Classes="primary" VerticalAlignment="Center" Text="Password:"/>
+                        <TextBox FontSize="14" Height="20" Margin="5" Text="{Binding Password}"/>
                 </StackPanel>
                 
                 <ComboBox HorizontalAlignment="Center" Name="RoleComboBox" Width="150" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" SelectedItem="{Binding RoleString}" Background="#1E1E1E" Margin="5"/>
                 
-                <StackPanel Name="ActionPanel" Grid.Row="4" Grid.Column="0" Margin="5" Grid.ColumnSpan="2"> <!-- TODO: Button Commands -->
-                        <Button Name="BanUserButton" Content="Ban User" HorizontalAlignment="Center" Margin="5"/>
-                        <Button Name="DeleteUserButton" Content="Delete User" HorizontalAlignment="Center" Margin="5"/>
-                        <Button Name="UnbanUserButton" Content="Unban User" HorizontalAlignment="Center" Margin="5"/>
+                <StackPanel Grid.Row="4" Grid.Column="0" Margin="5" Grid.ColumnSpan="2"> <!-- TODO: Button Commands -->
+                        <Button Content="Ban User" HorizontalAlignment="Center" Margin="5"/>
+                        <Button Content="Delete User" HorizontalAlignment="Center" Margin="5"/>
+                        <Button Content="Unban User" HorizontalAlignment="Center" Margin="5"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" Spacing="8" Orientation="Horizontal">
-                        <Button Name="SaveButton" Content="Save Changes" Command="{Binding saveCommand}" IsDefault="True"/>
-                        <Button Name="CancelButton" Content="Cancel" Command="{Binding cancelCommand}"/>
+                        <Button Content="Save Changes" Command="{Binding saveCommand}" IsDefault="True"/>
+                        <Button Content="Cancel" Command="{Binding cancelCommand}"/>
                 </StackPanel>
         </Grid>
         
